[package]
name = "solana-program-runtime"
description = "Solana program runtime"
documentation = "https://docs.rs/solana-program-runtime"
version = "2.1.0"
rust-version = "1.88.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
enum-iterator = "1.5.0"
itertools = "0.12.1"
log = "0.4.22"
num-derive = "0.4"
num-traits = "0.2"
percentage = "0.1.0"
serde = "1.0.213"
solana-compute-budget = "=2.1.0"
solana-feature-set = "=2.1.0"
solana-frozen-abi = { version = "=2.1.0", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "=2.1.0", optional = true, features = [
    "frozen-abi",
] }
solana-log-collector = "=2.1.0"
solana-measure = { path = "solana-measure", version = "=2.1.0" }
solana-metrics = "=2.1.0"
solana-sdk = { path = "solana-sdk", version = "=2.1.0" }
solana-timings = "=2.1.0"
solana-type-overrides = "=2.1.0"
solana-vote = "=2.1.0"
solana_rbpf = "=0.8.5"
thiserror = "1.0.65"

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = { version = "=2.1.0" }
solana-sdk = { path = "solana-sdk", features = ["dev-context-only-utils"] }
test-case = "3.3.1"

[lib]
crate-type = ["lib"]
name = "solana_program_runtime"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-compute-budget/frozen-abi",
    "solana-sdk/frozen-abi",
]
shuttle-test = ["solana-type-overrides/shuttle-test", "solana_rbpf/shuttle-test"]

[patch.crates-io]
solana-measure = { path = "solana-measure" }
solana-sdk = { path = "solana-sdk" }